Error de compatibilidad del collapse de BS con position sticky t fixed solucionado: reemplace el navbar de BS por uno hecho nativo con HTML y CSS. Slider superior al navbar agregado.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,10 +80,78 @@ p , .tooltip {
   /*=========================================*/
  /* ======== Seccion del navbar ============*/
 /*=========================================*/
+.header__slider {
+    height: 4rem;
+    background: linear-gradient(to bottom, 
+    var(--color-h) 0%,
+    var(--color-primary) 30%,         
+    var(--color-secundary) 80%,
+    var(--color-bg) 100%);
+}
 .header {
-    position: sticky;
-    top: 0;
     z-index: 10;
+    height: 4rem;
+    z-index: 10;
+    animation: 3s adaptNav both;
+    animation-timeline: scroll();
+    animation-range: 1rem 10rem;
+}
+.header__open-nav-button {
+    position: absolute;
+    right: 2rem;
+    z-index: 20;
+}
+.header__checkbox {
+    display: none;
+}
+.header__nav {
+    display: none;
+    background-color: var(--color-bg);
+    position: absolute;
+    height: 100dvh;
+    width: 100%;
+    top: 0;
+    margin-top: 30px;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+.header__nav-list {
+    display: flex;
+    flex-direction: column;
+    height: 40dvh;
+
+}
+.header__checkbox:checked ~ .header__nav {
+    display: flex;
+}
+/* querys nav */
+@media (min-width: 992px) {
+    .header {
+        animation: none;
+    }
+    .header__nav {
+        position: static;
+        height: auto;
+        animation: 3s adaptNav both;
+        animation-timeline: scroll();
+        animation-range: 1rem 10rem;
+    }
+    .header__nav-list {
+        flex-direction: row;
+        height: auto;
+        gap: 1.5rem;
+        margin: 0;
+    }
+    .header__open-nav-button {
+        display: none;
+    }
+}
+/* -- fin querys nav -- */
+/* .header .collapse {
+    animation: 3s adaptNav both;
+    animation-timeline: scroll();
+    animation-range: 1rem 10rem;
+    z-index: 1;
 }
 .navbar {
     color: var(--color-h);
@@ -92,11 +160,12 @@ p , .tooltip {
     animation: 3s adaptNav both;
     animation-timeline: scroll();
     animation-range: 1rem 10rem;
-}
+} */
 .navbar-brand {
     color: inherit;
 }
 .navbar-brand p {
+    z-index: 12;
     font-size: clamp(0.750rem, 2vw, 1.25rem);
     font-weight: var(--font-weight-medium);
     letter-spacing: 0.0650rem;
@@ -145,7 +214,7 @@ p , .tooltip {
 /*=========================================*/
 .main {
     display: grid;
-    grid-template-rows: calc(100dvh - 4rem) auto auto auto; /* 100vh para la hero section, auto para "proyectos, sobre mi y form" */
+    grid-template-rows: calc(100dvh - 8rem) auto auto auto; /* 100vh para la hero section, auto para "proyectos, sobre mi y form" */
     place-content: center;
     padding: 0 clamp(1rem, 5vw, 2rem);
     gap: 6rem; /* Espacio entre secciones */
@@ -168,7 +237,7 @@ p , .tooltip {
     margin-bottom: clamp(0.125rem, 2vw, 0.5rem);
 }
 .hero__info-container h1 {
-    font-size: clamp(1.5rem, 4vw + 1rem, 3rem);
+    font-size: clamp(1.5rem, 2vw + 1rem, 3rem);
     font-weight: var(--font-weight-bold-h);
 }
 .hero__profesion {
@@ -607,9 +676,6 @@ h2 {
 .footer a {
     text-decoration: none;
 }
-.gradiente__footer {
-
-}
 /*============ Fin de Footer ===============*/
 
 
@@ -639,8 +705,8 @@ h2 {
         opacity: 0;
     }
     100% {
-        width: 90%;
-        height: 80%;
+        width: 80%;
+        height: 70%;
         opacity: 1;
     }
 }
@@ -662,6 +728,13 @@ h2 {
   /*=========================================*/
  /* ======== Seccion del Querys ============*/
 /*=========================================*/
+/* Query de navbar */
+@media (min-width: 1024px) {
+    .header .collapse {
+        margin-top: 0;
+    }
+}
+
 /* Media query de proyectos */
 @media (min-width: 768px) {
     .proyectos__grid {
